# term-paper

./: Makefile  README.md  collect_data.py  pyproject.toml
configs/: config.py  data_collection.toml
mysql_db/: client.py
research/scripts/: bb.py  macd.py  preprocessing.py
sql/: create_tables_fundrates.sql  create_tables_tr.sql  insert_values.sql
